# quick_calib

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: baseline.ipynb  check_synth_labels.ipynb  eda_vpgnet.ipynb
quick_calib/: camera.py  orientation.py
scripts/: diffuse_from_canny.py  extract_frames.sh  gen_canny.py
