[tool.poetry]
name = "quick-calib"
version = "0.1.0"
description = ""
authors = ["armandpl <adpl33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scipy = "^1.11.4"
jupyter = "^1.0.0"
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
kornia = "^0.7.1"
torch = "^2.1.2"
opencv-python = "^4.9.0.80"
torchvision = "^0.16.2"
numpy = "^1.26.3"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
